--- a/Reports/StatisticalSummary.Rmd
+++ b/Reports/StatisticalSummary.Rmd
@@ -1,9 +1,11 @@
 ---
 geometry: margin=1in
 output:
-  word_document: default
+  html_document:
+    df_print: paged
   pdf_document:
     fig_caption: yes
+  word_document: default
 ---
 
 ```{r global_options, include=FALSE}
@@ -12,19 +14,50 @@ knitr::opts_knit$set(root.dir = '../')
 ```
 
 ```{r setup, include=FALSE}
-load(file = 'DataProcessed/DataClean.RData')
-load(file = 'DataProcessed/Results.RData')
-load(file = 'DataProcessed/Table1.R')
-library(pander)
+options(knitr.kable.NA = '--')
 library(CIDAtools)
+library(tidyverse)
+library(diagram)
+library(kableExtra)
+
+load(file = 'DataProcessed/cleaned_model.RData')
+load(file = 'DataProcessed/step_numbers.RData')
+str_pad_max <- function(string, 
+                        side =  c("right", 'left', "both"), 
+                        pad = " "){
+  side <- match.arg(side)
+  width <- max(str_length(string))
+  str_pad(string, width, side, pad)
+}
+
+flow_chart <- 1
+
+n_ifsac <- n_ifsac %>% mutate(IFSACLevel1 = fct_explicit_na(IFSACLevel1))
+n_not_food <- n_not_food 
+n_outbreaks <- analysis %>% 
+  mutate(attr_source = fct_infreq(attr_source) ) %>% 
+  count(attr_source) 
+n_final <- analysis %>% 
+  select(percent_female, 
+         percent_age_under1, 
+         percent_age1to4, 
+         percent_age5to19, 
+         percent_age20to49, 
+         percent_age50plus, 
+         month, 
+         geography, 
+         serogroup, 
+         attr_source) %>% 
+  filter(!str_detect(attr_source, 'Other')) %>% 
+  mutate(attr_source = str_replace(str_to_lower(attr_source), 
+                                   pattern = ' ',
+                                   replacement = '_')) %>% nrowP(.)
 ```
 **Project:**`r CIDAtools::ProjectName()`
 **PI:**`r CIDAtools::ProjectPI()`  
 **Prepared By:**`r CIDAtools::ProjectAnalyst()`  
 **Date:** `r paste(format(Sys.Date(), '%m/%d/%Y'))`  
-
-# Introduction  
-
+  
 # Methods  
 ## Data
 Data were collected from 1998-2016 from NORS.
@@ -32,130 +65,229 @@ Data were collected from 1998-2016 from NORS.
 Foodborne outbreaks were grouped into categories based on the food source as 
 identified in NORS. Outbreaks missing IFSAC information, those caused by 
 multiple sources, unclassifiable outbreaks, outbreaks of undetermined source 
-and outbreaks from a source other than animal or plant were removed. Food 
-sources that were rare (less than 100 outbreaks) were removed. 
-Non foodbourne outbreaks caused by animal contact were included. 
+and outbreaks from a source other than animal or plant were removed. Foodbourne 
+outbreak caused by dairy, eggs, fruits, meat, poultry, or vegetables were 
+included.
+Foodbourne outbreaks caused by other sources were excluded. 
+Non foodbourne outbreaks caused by animal contact were included. (Fig 1)  
+The final analysis data was split into training (75%) and test(25%) statified 
+by outbreak source to ensure balance. 
 
-Data were split into a training set (75%) and a testing set (25%). Outbreaks 
-from rare sources were not removed until after the split so they could be 
-left in the testing set. In order to more accurately reflect actual usage, 
-foodbourne outbreaks 
-of other origin were included in the testing set, 
-outbreaks with multiple, unclassifiable and no identified food sources were not.
- The number of 
-total cases, the season the outbreak started, the geography of the outbreak 
-(multistate, single state - multicounty, single state - single county), the agent
-(STEC or Salmonella Serotype), the percentage of female and male cases, the 
-percentage of people hospitalized, and the percentage of cases in each age group
-(Under 1 year, 1-4 yrs, 5-9 yrs, 10-19 yrs, 20-49 yrs, 50- 74 yrs, 75 yrs and
-older) were used as predictors. 
+```{r flow_chart, fig.cap = paste0('Fig.', flow_chart, ' Cohort Flow Chart'), fig.width = 10, fig.height = 6}
+# create a flow chart to show inclusion/exclusion criteria
+par(mar = c(1,1,1,1))
+openplotmat()
+mid1 <- 0.725
+mid2 <- 0.525
+bottom <- 0.2
+# set number of columns for each row
+elpos <- matrix(ncol = 3, byrow = F, 
+                data = c(rep(c(0.2, 0.6), 3), 0.2, 0.725,
+                         rep(c(0.15, 0.4), 3), 0.15, 0.8, 
+                         sort(rep(c(0.9, mid1, mid2, bottom), 
+                                  2), decreasing = T) 
+                         )
+                )
+# set connections
+fromto <- matrix(ncol = 2, byrow = T, 
+                 data = c(1, 7, 3, 4, 5, 6, 7, 8))
 
-Outbreaks which started between Jan and Mar were classified as winter, between 
-Apr and Jun as spring, between Jul and Sept as summer and between Oct and Dec 
-as fall. 
+# set size factors so they can be adjusted at once
+cex_fxr <- 1
+rad_x <- 0.2
+rad_y <- 0.065
+y_2 <- 0.08
+y_3 <- 0.095
+
+# create arrows
+nr     <- nrow(fromto)
+arrpos <- matrix(ncol = 2, nrow = nr)
+for (i in 1:nr)
+  arrpos[i,] <- straightarrow(to = elpos[fromto[i, 2], -1],
+                              from = elpos[fromto[i, 1], -1],
+                              lwd = 1, arr.pos = 0.5, arr.length = 0.3)
+
+# create boxes
+textrect(elpos[1, -2], radx = rad_x, rady = rad_y, 
+         lab = c("All non-waterborne NORS Outbreaks", 
+                 "with Salmonella or STEC etiology", 
+                 paste0('N = ', format(n_start, big.mark = ',', trim = T))), 
+         cex = cex_fxr)
+textrect(elpos[4, -2], radx = rad_x + 0.075, rady = y_2)
+textplain(c(0.35, mid1), height = y_2, 
+         lab = c("Excluded (Source):", 
+                 paste(n_not_food$primary_mode)
+                 ), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textplain(c(0.78, mid1), height = y_2, 
+         lab = c(" ", 
+                 paste('N =', 
+                       str_pad_max(n_not_food$n, side = 'left'))
+                 ), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textrect(elpos[6, -2], radx = rad_x + 0.075, rady = y_3)
+textplain(c(0.35, mid2), height = y_3, 
+         lab = c("Excluded (IFSAC):", 
+                 paste(n_ifsac$IFSACLevel1)
+                 ), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textplain(c(0.78, mid2), height = y_3, 
+         lab = c(" ", 
+                 paste('N =', 
+                       str_pad_max(format(n_ifsac$n, big.mark = ','), 
+                                   side = 'left'))
+                 ), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textrect(elpos[7, -2], radx = rad_x, rady = y_3 + rad_y)
+textplain(c(0.01, bottom), height = y_3 + rad_y, 
+         lab = c("Included NORS Outbreaks:", 
+                 paste(filter(n_outbreaks, 
+                              !str_detect(attr_source, 'Other') )$attr_source)), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textplain(c(0.3, bottom), height = y_3 + rad_y, 
+         lab = c(" ", 
+                 paste('N =', 
+                       format(filter(n_outbreaks, 
+                              !str_detect(attr_source, 'Other') )$n, 
+                              big.mark = ', ')
+                       )
+                 ), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textrect(elpos[8, -2], radx = rad_x - 0.05, rady = y_2)
+textplain(c(0.58, bottom), height = y_2, 
+         lab = c("Excluded NORS Outbreaks:", 
+                 paste(filter(n_outbreaks, 
+                              str_detect(attr_source, 'Other') )$attr_source)), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+textplain(c(0.78, bottom), height = y_2, 
+         lab = c(" ", 
+                 paste('N =', 
+                       format(filter(n_outbreaks, 
+                              str_detect(attr_source, 'Other') )$n, 
+                              big.mark = ', ')
+                       )
+                 ), 
+         cex = cex_fxr, 
+         adj = c(0, 0.5))
+
+
+```
+
+## Predictors  
+The month of the first illness, the geography of the outbreak (multi state, 
+multi county, single county), the etiology of the outbreak (STEC or Salmonella 
+serotype) and the gender and ages of cases were used as predictors. Missing 
+predictors were imputed using k-nearest neighbors and the training data. 
+
+*Gender and Age*  
+The number of female cases as a proption of cases whose gender was known was 
+used for predicting. If gender was unknown for all cases, the predictor was 
+missing. The number of cases for each age group (under 1, 1 to 4, 5 to 19, 
+20 to 49, 50 plus) as a propotion of cases whose age was known was used for 
+predicting. If age was unknown for all cases, the age predictors were missing. 
+
+*Salmonella Serotypes*
+Only serotypes with ten or more outbreaks were included as is. Salmonella 
+serotypes 
+with less than ten outbreaks but more than three were clustered into three 
+groups based on there association with plant or animal 
+outbreaks using logistic regression. 
+Serotypes with three or fewer outbreaks were categorized as rare. 
+Missing Salmonella serotypes were treated as missing.
+
 
 ## Model Selection  
-We selected seven algorithmic methods for 
+We selected six algorithmic methods for 
 prediction based on their ability to predict 
-multiple class probabilities well - bagged adaptive boosting classification 
-trees, classification and 
-regression trees (CART), weighted k nearest neighbors (knn), flexible 
-discriminant analysis 
-(FDA), weighted subspace random forest, Naive Bayes, and rule-based classifier. 
+multiple class probabilities well - adaptive boosting classification 
+trees (AdaBoost.M1), classification and 
+regression trees (CART), weighted k nearest neighbors (knn), 
+boosted trees (using xgboost), random forest (using ranger) and multivariate 
+adaptive regression splines (MARS). 
 A non-informative model that uses no information from predictors was also 
 generated for comparison purposes. 
 The final model was chosen based on Brier 
 Scores (a measure of the difference in the predicted probability and the actual 
-event). Outbreaks with other origins were included in the brier score 
-calculations. All analysis was done in `r R.Version()$version.string` with 
-the Caret Package v(`r packageVersion('caret')`. 
-Parameter selection was 
-performed using the Caret package. 
-
-```{r tbl1}
-panderOptions('keep.line.breaks', T)
-panderOptions('table.split.table', Inf)
-pander(tbl1, 'Outbreak Characteristics by Source')
-```
+event). All analysis was done in `r R.Version()$version.string`. Datacleaning 
+was done using the tidyverse. RSample and
+Recipes (part of tidymodels) were used for data splitting, imputation and 
+preprocessing. Parsnip was used for the null model. 
+The Caret Package v(`r packageVersion('caret')` was used for tuning and test 
+set prediction. 
 
 # Results  
-1261 outbreaks missing IFSAC information, 479 outbreaks caused by multiple 
-sources, 51 unclassifiable outbreaks, 145 outbreaks of undetermined source and 
-12 outbreaks from a source other
-than animal or plant were removed. 79 dairy, 
-19 fish, 9 game, 10 grains-beans, 18 nuts-seeds, 1 oils-sugars, and 35 Aquatic 
-Animals outbreaks were classified as other.  
+There were `r format(n_start, big.mark = ',', trim = T)` non-waterborne 
+outbreaks in the NORS database. 
+`r format(sum(n_not_food$n), big.mark = ',', trim = T)` outbreaks that were not
+foodborne or animal contact were excluded. 
+`r format(sum(n_ifsac$n), big.mark = ',', trim = T)` foodborne outbreaks were 
+excluded because they did not have a single identifiable food source. 
+The final data set included `r n_final` outbreaks that were identified as 
+dairy, eggs, fruits, meat, poultry, vegetables and animal contact.
 
 Characteristics of outbreaks in the analysis are given in table 1. 
-Egg outbreaks were more likely to table place in the summer, and animal contact
-outbreaks were more common in winter. Meat/Poultry and Produce outbreaks were 
-both uncommon in the winter. Egg outbreaks were most likely to be cause by 
-Salmonella Enteritis and be single county. Egg outbreaks were also more likely
-to have unknown proportions of male vs female and ages. Animal Contact outbreaks
-were more likely to have higher percentages of young children, with a mean
-percentage of 23% for 1 to 4 year olds. Produce outbreaks had higher percentages
-of people over 20 (20-49 yr olds, 50-74 yr olds, and those over 75) than any 
-other outbreak source. Produce outbreaks also tended to be larger. 
-
-The testing data set consisted of 11% egg, 39% meat-poultry, 21% produce, 13%
-animal contact, and 16% other outbreaks (table 2). 
 
 
-```{r table2}
-test <- table(testing$Category)
-train <- table(training$Category)
-tbl2 <- rbind(test, train)
-pander(tbl2, caption = 'Outbreak Sources in testing and training dataset')
+```{r table1}
+analysis %>%  mutate(attr_source = fct_other(attr_source, 
+                                            drop = c('Other', 
+                                                     'Meat-Poultry Other', 
+                                                     'Produce Other'))) %>% 
+  desc_table(.,
+             c(season, geography, total_cases, 
+               percent_male:percent_age50plus, 
+               hosp_percent, outbreak_length), 
+             attr_source) %>% 
+  unite(col = cols, attr_source, total_n, sep = ' <br> N= ') %>% 
+  pivot_wider(names_from = cols, values_from = outcome) %>% 
+  mutate(value = case_when(
+    type == 'freq' ~ value, 
+    type == 'mean_sd' ~ 'Mean (SD)', 
+  ), 
+  variable = recode_factor(variable, 
+                           "season" = "Season", 
+                           'geography' = "Geography", 
+                           'total_cases' = "Total Cases", 
+                           'percent_male' = "Percent Male", 
+                           'percent_female' = "Percent Female", 
+                           'percent_age_under1' = "Percent Under 1yr", 
+                           'percent_age1to4' = "Percent 1yr to 4yr", 
+                           'percent_age5to19' = "Percent 5yr to 19yr", 
+                           'percent_age20to49' = "Percent 20yr to 49yr", 
+                           'percent_age50plus' = "Percent 50yr or older", 
+                           'hosp_percent' = "Percent Hospitalized", 
+                           'outbreak_length' = "Length (in days) of Oubreak")
+  ) %>% 
+  select(-type) %>% 
+  rename(` ` = variable, ` ` = value) %>% 
+  kable(escape = F, 
+        caption = 'Table 1. Outbreak Charactersics by Source') %>% 
+  kable_styling() %>% 
+  collapse_rows(1)
+    
+  
+
 ```
 
 
-Model performance varied, two models(Naive Bayes and rule-based classifier) 
-had a Brier Score worse than the non informative model. Weighted k nearest 
-neighbors and weighted subspace random forest performed the best with Brier 
-Scores of 0.125 and FDA of 0.127, respectively. 
-Calibration curves based on the testing data set are shown in Fig 1. Weighted k
-nearest neighbors was chosen for the final model. 
 
-```{r brierscore}
-names(BrierScore) <- 
-pander(unlist(BrierScore), caption = 'Brier Scores')
+
+```{r brierscore, eval = F}
+
 ```
 
-With knn, a source with a predicted probability from 0 to 20% was correct 5%
-of the time and a source with a predicted probability from 80 to 100% 
-probabilities was correct 56.5% of the time (table 3). 
 
-```{r table3}
-tbl3 <- rbind(do.call(rbind, ForTable), Correct)
-rownames(tbl3)[5] <- 'All'
-tbl3 <- round(tbl3*100, 0)
-colnames(tbl3) <- c("0-20%", 
-                    "20-40%", 
-                    "40-60%", 
-                    "60-80%", 
-                    "80-100%")
-pander(tbl3, caption = 'Percent of Time the Source was Correct by Predicted Probability')
-```
+
 
 # Discussion
-In order to more accurately reflect performance in real settings, we included
-outbreaks from sources other than the top four in our performance metrics. This 
-causes our calibration curves and brier scores to be slightly biased as 16% of 
-our test cases had no correct answer. 
-Outbreaks with a high predicted probability (80-100%) of meat-poultry tended to 
-be either
-meat-poultry (46% of the time) or other (33% of the time). 
 
 
-Outbreaks with eggs as source were much more likely to have missing information 
-(higher percent sex unknown, higher age unknown, and a higher percentage of 
-missing hospitalization information). As there is a probability that this 
-information will not be unknown to an epidemiologist using the tool and represents
-reporting bias in the training data, this could lead to less accurate results 
-in practice. 
-
-
-
-![](Figures/CalibrationPlots.png)
 
 
